--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "4.0.0",
     "pm2": "^3.0.0",
+    "qrcode": "^1.4.2",
     "uuid": "^3.1.0",
     "winston": "^3.1.0"
   },
